<resources>
    <string name="app_name">askMe</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_register">New user? Click here</string>
    <string name="hint_email">Email Id</string>
    <string name="hint_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="btn_link_to_login">Already Registered. Login Me</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_no">Phone Number</string>
    <string name="next">Next</string>
    <string name="dialog_add_photo">Add photo</string>
    <string name="tap_to_photo">Tap to choose photo</string>
    <string name="hint_business_name">Enter business Name</string>
    <string name="hint_business_description">Enter business description</string>
    <string name="hint_business_Address">Enter business Address</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_browse">Browse</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_business_phone">Enter phone number</string>
    <string name="tap_to_business_image">Tap to choose business image</string>
    <string name="btn_create_business_profile">Create free business account for (Your Business)</string>
    <string name="hint_street_name">Enter street name</string>
    <string name="hint_city_name">Enter city name</string>
    <string name="hint_country_name">Enter countroy name</string>
    <string name="hint_zip_code">Enter zip code</string>
    <string name="login_in">Login In</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Glitter Technology Ventures Pvt Ltd.</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_profile_business">EditProfileBusinessActivity</string>
    <string name="profile">Profile</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="description">Description</string>
    <string name="hint_conform_password">Enter Conform Password</string>

    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="rationale_sms">This app needs access to your sms to read all your great messages.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings_dialog_canceled">Settings dialog canceled</string>
    <string name="returned_from_app_settings_to_activity">Returned from app settings to MainActivity</string>
    <string name="has_read_sms_permission">Has read sms permission: %b</string></resources>
